# barcodes_from_csv_ean13

./: .gitignore  CHANGELOG.md  README.en.md  README.md  barcode_tool_gui.py  barcode_tool_launcher.py  barcodes_from_csv_ean13.py  pyproject.toml  requirements.txt
examples/: sample.csv
scripts/: build_launcher.ps1  build_windows.ps1
src/barcode_tool/: __init__.py  core.py  gui.py
