[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcodes-from-csv-ean13"
version = "1.1.0"
description = "Generate EAN-13 barcode PNGs from a CSV file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-barcode",
  "Pillow"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
